+ Added: localization strings for save changes confirmation dialog

--- a/chrome/custombuttons/locale/en-US/custombuttons/custombuttons.properties
+++ b/chrome/custombuttons/locale/en-US/custombuttons/custombuttons.properties
@@ -11,4 +11,4 @@ ContinueButton=Continue
 extensions.custombuttons@xsms.org.description=Gives a possibility to create custom toolbarbuttons.
 finddialogFindTitle=Find
 finddialogReplaceTitle=Replace
-
+ConfirmSaveChanges=Button code has been changed.\nSave the changes ?
