--- a/chrome/custombuttons/locale/pl-PL/custombuttons/custombuttons.properties
+++ b/chrome/custombuttons/locale/pl-PL/custombuttons/custombuttons.properties
@@ -11,4 +11,4 @@ ContinueButton=Continue
 extensions.custombuttons@xsms.org.description=Oferuje możliwość tworzenia własnych przycisków na pasku narzędzi. 
 finddialogFindTitle=Find
 finddialogReplaceTitle=Replace
-
+ConfirmSaveChanges=Button code has been changed.\nSave the changes ?
