--- a/chrome/custombuttons/locale/pt-BR/custombuttons/custombuttons.properties
+++ b/chrome/custombuttons/locale/pt-BR/custombuttons/custombuttons.properties
@@ -11,4 +11,4 @@ ContinueButton=Continue
 extensions.custombuttons@xsms.org.description=Dá a possibilidade de criar botões customizáveis na Barra de Ferramentas
 finddialogFindTitle=Find
 finddialogReplaceTitle=Replace
-
+ConfirmSaveChanges=Button code has been changed.\nSave the changes ?
