--- a/chrome/custombuttons/locale/sk-SK/custombuttons/custombuttons.properties
+++ b/chrome/custombuttons/locale/sk-SK/custombuttons/custombuttons.properties
@@ -11,4 +11,4 @@ ContinueButton=Continue
 extensions.custombuttons@xsms.org.description=Ponúka možnosť vytvoriť si vlastné tlačidlá na panel nástrojov.
 finddialogFindTitle=Find
 finddialogReplaceTitle=Replace
-
+ConfirmSaveChanges=Button code has been changed.\nSave the changes ?
