--- a/chrome/custombuttons/locale/zh-CN/custombuttons/custombuttons.properties
+++ b/chrome/custombuttons/locale/zh-CN/custombuttons/custombuttons.properties
@@ -11,4 +11,4 @@ ContinueButton=Continue
 extensions.custombuttons@xsms.org.description=让您有机会创建自定义工具栏按钮。
 finddialogFindTitle=Find
 finddialogReplaceTitle=Replace
-
+ConfirmSaveChanges=Button code has been changed.\nSave the changes ?
