--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,13 @@
 Changelog
+0.0.5.0 (was not released)
++ Added: Seamonkey 2.1a3pre compatibility
++ Added: Firefox 4.0b3pre compatibility
++ Added: "Edit…" button in update button prompt dialog
++ Added: LOG, addEventListener, removeEventListener functions
++ Added: "reason" argument for "onDestroy" custom button's method
+* Restored desctructor section in custom buttons binding
+* Implemented new code execution mechanism
+# Fixed: checkboxDialog / radioboxDialog doesn't modify options array argument
 0.0.4.9
 + Added: nl-NL translation
 + Added: de-DE translation
