--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,15 @@
 Changelog
+0.0.5.1
++ Added: Seamonkey 2.1a3pre compatibility
++ Added: Firefox 4.0b3pre compatibility
++ Added: "Edit…" button in update button prompt dialog
++ Added: LOG, addEventListener, removeEventListener functions
++ Added: "reason" argument for "onDestroy" custom button's method
+* Restored desctructor section in custom buttons binding
+* Implemented new code execution mechanism
+# Fixed: checkboxDialog / radioboxDialog doesn't modify options array argument
+# Fixed: bug 23040 "Assignment an custombuton:// uri as a button image causes infinite button installation loop"
+# Fixed: some minor bugs
 0.0.5.0 (was not released)
 + Added: Seamonkey 2.1a3pre compatibility
 + Added: Firefox 4.0b3pre compatibility
