--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
 Changelog
+0.0.5.2
+! Changed: "custombuttons.mode" preference prefixed with "extensions." to compliance AMO rules
+# Fixed: Incorrect caret positioning when it moves in the presence of selected text
+Added: Ability to save position and size of editor's windows separately for each button
 0.0.5.1
 + Added: Seamonkey 2.1a3pre compatibility
 + Added: Firefox 4.0b4pre compatibility
