--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,7 @@
 Changelog
 0.0.5.2
++ Added: Seamonkey 2.1b1pre compatibility
++ Added: Firefox 4.0b5pre compatibility
 ! Changed: "custombuttons.mode" preference prefixed with "extensions." to compliance AMO rules
 # Fixed: Incorrect caret positioning when it moves in the presence of selected text
 Added: Ability to save position and size of editor's windows separately for each button
