Added localization for image file picker dialog title

--- a/chrome/custombuttons/locale/de-DE/custombuttons/custombuttons.properties
+++ b/chrome/custombuttons/locale/de-DE/custombuttons/custombuttons.properties
@@ -12,3 +12,4 @@ extensions.custombuttons@xsms.org.description=Ermöglicht es, eigene Symbolleist
 finddialogFindTitle=Suchen
 finddialogReplaceTitle=Ersetzen
 ConfirmSaveChanges=Schaltfläche wurde geändert.\nÄnderungen speichern ?
+editorImageFilePickerDialogTitle=Select Image File
