--- a/chrome/custombuttons/locale/en-US/custombuttons/custombuttons.properties
+++ b/chrome/custombuttons/locale/en-US/custombuttons/custombuttons.properties
@@ -12,3 +12,4 @@ extensions.custombuttons@xsms.org.description=Gives a possibility to create cust
 finddialogFindTitle=Find
 finddialogReplaceTitle=Replace
 ConfirmSaveChanges=Button code has been changed.\nSave the changes ?
+editorImageFilePickerDialogTitle=Select Image File
