--- a/chrome/custombuttons/locale/pt-BR/custombuttons/custombuttons.properties
+++ b/chrome/custombuttons/locale/pt-BR/custombuttons/custombuttons.properties
@@ -12,3 +12,4 @@ extensions.custombuttons@xsms.org.description=Dá a possibilidade de criar botõ
 finddialogFindTitle=Find
 finddialogReplaceTitle=Replace
 ConfirmSaveChanges=Button code has been changed.\nSave the changes ?
+editorImageFilePickerDialogTitle=Select Image File
