--- a/chrome/custombuttons/locale/sk-SK/custombuttons/custombuttons.properties
+++ b/chrome/custombuttons/locale/sk-SK/custombuttons/custombuttons.properties
@@ -12,3 +12,4 @@ extensions.custombuttons@xsms.org.description=Ponúka možnosť vytvoriť si vla
 finddialogFindTitle=Find
 finddialogReplaceTitle=Replace
 ConfirmSaveChanges=Button code has been changed.\nSave the changes ?
+editorImageFilePickerDialogTitle=Select Image File
