--- a/chrome/custombuttons/locale/ru-RU/custombuttons/custombuttons.dtd
+++ b/chrome/custombuttons/locale/ru-RU/custombuttons/custombuttons.dtd
@@ -15,5 +15,6 @@
 <!ENTITY custombuttons.prefs.disable_init "Отключить инициализацию кнопок (используйте при проблемах с кнопками, изменения примут силу только в новых окнах)">
 <!ENTITY custombuttons.prefs.disable_init_in_customize_toolbar "Запретить инициализацию кнопок в диалоговом окне &quot;Настройка панелей инструментов&quot;">
 <!ENTITY custombuttons.prefs.enable_custombutton_protocol "Разрешить установку кнопок из почтовых сообщений">
+<!ENTITY custombuttons.prefs.editor_save_size_and_position "Сохранять размеры и позицию окон редактора отдельно для каждой кнопки">
 
 <!ENTITY custombuttons.about.supportPageURL "Открыть страницу поддержки">
