- Removed: Export buttons into old custombutton:// URI formats

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,8 @@
 Changelog
 0.0.5.2
+- Removed: Export buttons into old custombutton:// URI formats
++ Added: Firefox 4.0b6pre compatibility
 + Added: Seamonkey 2.1b1pre compatibility
-+ Added: Firefox 4.0b5pre compatibility
 * Implemented backups overlays
 ! Changed: "custombuttons.mode" preference prefixed with "extensions." to compliance AMO rules
 # Fixed: Incorrect caret positioning when it moves in the presence of selected text
