--- a/chrome/custombuttons/locale/de-DE/custombuttons/custombuttons.dtd
+++ b/chrome/custombuttons/locale/de-DE/custombuttons/custombuttons.dtd
@@ -10,8 +10,8 @@
 
 <!ENTITY custombuttons_prefsDialog.title "Custom Buttons: Einstellungen">
 <!ENTITY custombuttons.prefs.show_apply_button "Zeige &quot;Übernehmen&quot; im Schaltflächen-Codeeditor">
-<!ENTITY custombuttons.prefs.disable_init "Schaltflächen-Initialisierung abschalten (wirkt sich nur auf neue Fenster aus)">
+<!ENTITY custombuttons.prefs.disable_init "Schaltflächen-Initialisierung abschalten (Bei Problemen mit Schaltflächen zu benutzen, wirkt sich nur auf neue Fenster aus)">
 <!ENTITY custombuttons.prefs.enable_custombutton_protocol "Installation von Schaltflächen aus Mail-Nachrichten ermöglichen">
-<!ENTITY custombuttons.prefs.editor_save_size_and_position "Save size and position of editor windows separately for each custom button">
+<!ENTITY custombuttons.prefs.editor_save_size_and_position "Größe und Position der Bearbeiten-Fenster für jede Schaltfläche separat speichern">
 
 <!ENTITY custombuttons.about.supportPageURL "Support Website besuchen">
