nl-NL locale updated

--- a/chrome/custombuttons/locale/nl-NL/custombuttons/custombuttons.dtd
+++ b/chrome/custombuttons/locale/nl-NL/custombuttons/custombuttons.dtd
@@ -10,8 +10,8 @@
 
 <!ENTITY custombuttons_prefsDialog.title "Custom Buttons: instellingen">
 <!ENTITY custombuttons.prefs.show_apply_button "Knop “Opslaan” in code-editor tonen">
-<!ENTITY custombuttons.prefs.disable_init "Initialisatie van knoppen uitschakelen (Wijzigingen zijn alleen van invloed op nieuwe vensters)">
+<!ENTITY custombuttons.prefs.disable_init "Initialisatie van knoppen uitschakelen (Gebruik dit bij problemen met knoppen, wijzigingen zijn alleen van invloed op nieuwe vensters)">
 <!ENTITY custombuttons.prefs.enable_custombutton_protocol "Installatieknoppen in e-mailberichten inschakelen">
-<!ENTITY custombuttons.prefs.editor_save_size_and_position "Save size and position of editor windows separately for each custom button">
+<!ENTITY custombuttons.prefs.editor_save_size_and_position "Grootte en positie van editorvensters voor elke aangepaste knop apart opslaan">
 
 <!ENTITY custombuttons.about.supportPageURL "Ondersteuningspagina bezoeken">
