--- a/chrome/custombuttons/locale/nl-NL/custombuttons/custombuttons.properties
+++ b/chrome/custombuttons/locale/nl-NL/custombuttons/custombuttons.properties
@@ -12,4 +12,4 @@ extensions.custombuttons@xsms.org.description=Geeft een mogelijkheid om aangepas
 finddialogFindTitle=Zoeken
 finddialogReplaceTitle=Vervangen
 ConfirmSaveChanges=Knopcode is gewijzigd.\nWijzigingen opslaan?
-editorImageFilePickerDialogTitle=Select Image File
+editorImageFilePickerDialogTitle=Afbeeldingsbestand selecteren
