--- a/chrome/custombuttons/locale/ko-KR/custombuttons/custombuttons.properties
+++ b/chrome/custombuttons/locale/ko-KR/custombuttons/custombuttons.properties
@@ -1,5 +1,15 @@
 RemoveConfirm="%s" 버튼을 삭제하시겠습니까?
-ButtonAddedAlert=버튼이 생성되었습니다.\n"보기 -> 도구 모음 -> 사용자 지정"을 통해 버튼을 툴바에 추가할 수 있습니다.
-InstallConfirm="%s" 버튼을 정말로 설치하시겠습니까?
-ButtonErrors=버튼은 오류를 포함하고 있어서 생성할 수 없습니다.
-extensions.custombuttons@xsms.org.description=맞춤 툴바 버튼을 생성하기 위한 기회를 제공해주십시오.
+UpdateConfirm="%s" 버튼을 %n 버튼으로 업데이트하시겠습니까?
+ButtonAddedAlert=버튼이 생성되었습니다.\n"보기 -> 도구 모음 -> 사용자 지정"에서 버튼을 툴바에 추가합니다.
+InstallConfirm="%s" 버튼을 설치하시겠습니까?
+OpenInEditor=편집…
+ButtonDoesntExist=버튼이 아직 존재하지 않으므로 코드를 실행할 수 없습니다.
+AddButtonEditorDialogTitle=새 버튼 추가
+ButtonErrors=버튼은 오류를 포함하고 있어서 생성되지 않습니다.
+ButtonHelpTitle=\"%s\"의 도움말 :: ID = %y
+ContinueButton=확인
+extensions.custombuttons@xsms.org.description=툴바에 나만의 맞춤형 버튼을 추가합니다.
+finddialogFindTitle=찾기
+finddialogReplaceTitle=교체
+ConfirmSaveChanges=버튼의 코드가 변경되었습니다.\n변경사항을 저장하시겠습니까?
+editorImageFilePickerDialogTitle=Select Image File
