--- a/chrome/custombuttons/locale/ko-KR/custombuttons/custombuttons.dtd
+++ b/chrome/custombuttons/locale/ko-KR/custombuttons/custombuttons.dtd
@@ -12,6 +12,6 @@
 <!ENTITY custombuttons.prefs.show_apply_button "코드 편집기에 &quot;저장&quot; 버튼을 보이기">
 <!ENTITY custombuttons.prefs.disable_init "버튼 초기화를 사용 안 함 (변경사항은 오직 새 창에만 적용됨)">
 <!ENTITY custombuttons.prefs.enable_custombutton_protocol "메일 메시지로부터 버튼을 설치함">
-<!ENTITY custombuttons.prefs.editor_save_size_and_position "Save size and position of editor windows separately for each custom button">
+<!ENTITY custombuttons.prefs.editor_save_size_and_position "각각의 맞춤 버튼에 대한 편집기 창의 크기와 위치를 별도로 저장함">
 
 <!ENTITY custombuttons.about.supportPageURL "지원 페이지 방문">
