--- a/chrome/custombuttons/locale/zh-CN/custombuttons/custombuttons.properties
+++ b/chrome/custombuttons/locale/zh-CN/custombuttons/custombuttons.properties
@@ -1,15 +1,15 @@
 RemoveConfirm=要删除 "%s" 按钮吗?
-UpdateConfirm=Are you sure you want to update "%s" button with the %n button ?
-ButtonAddedAlert=您已经成功创建了该按钮。\n通过 “查看->工具栏->定制…“ 您可以把按钮放置在任意工具栏上
+UpdateConfirm=您确定要更新 "%s" 按钮为 %n 按钮?
+ButtonAddedAlert=您已经成功创建了该按钮。\n通过 “查看->工具栏->定制...“ 您可以把按钮放置在任意工具栏上
 InstallConfirm=您是否确定要安装 "%s" 按钮？
-OpenInEditor=Edit…
-ButtonDoesntExist=Can't execute code because button doesn't exist yet
-AddButtonEditorDialogTitle=Add new button
+OpenInEditor=编辑...
+ButtonDoesntExist=无法执行代码,因为按钮不存在
+AddButtonEditorDialogTitle=添加新按钮
 ButtonErrors=由于该按钮有错误，因此无法创建！
-ButtonHelpTitle="Help for \"%s\" :: ID = %y"
-ContinueButton=Continue
+ButtonHelpTitle="帮助: \"%s\" :: ID = %y"
+ContinueButton=继续
 extensions.custombuttons@xsms.org.description=让您有机会创建自定义工具栏按钮。
-finddialogFindTitle=Find
-finddialogReplaceTitle=Replace
-ConfirmSaveChanges=Button code has been changed.\nSave the changes ?
-editorImageFilePickerDialogTitle=Select Image File
+finddialogFindTitle=查找
+finddialogReplaceTitle=替换
+ConfirmSaveChanges=按钮代码已经改变。\n保存变化?
+editorImageFilePickerDialogTitle=选择图像文件
