Updated zh-CN translation

--- a/chrome/custombuttons/locale/zh-CN/custombuttons/editor.dtd
+++ b/chrome/custombuttons/locale/zh-CN/custombuttons/editor.dtd
@@ -8,7 +8,7 @@
 <!ENTITY editor.image.accesskey "m">
 <!ENTITY editor.select "浏览…">
 <!ENTITY editor.select.accesskey "o">
-<!ENTITY editor.base64 "&#8658; base64">
+<!ENTITY editor.base64 "&amp;#8658; base64">
 <!ENTITY editor.base64.accesskey "b">
 <!ENTITY editor.base64.tooltiptext "把图片转换到 base64 格式 (data:image/png;base64,...)">
 <!ENTITY editor.code "代码">
