--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,11 @@
 Changelog
 0.0.5.3
++ Added: Firefox 4.0 compatibility
+! Changed: Now buttons wait for initialization till window will be loaded
 + Added: sr translation
 + Added: it-IT translation
 # Fixed: buttons aren't initialized after dragging from "Customize Toolbar" dialog
+# Fixed: (Editor) Ctrl+Shift+A doesn't work in Firefox 4
 0.0.5.2
 + Added: ko-KR translation
 - Removed: Buttons initialization in "Customize Toolbar dialog"
