Integration with addon manager, draft implementation
--HG--
branch : bug24045

--- a/chrome/custombuttons/locale/en-US/custombuttons/custombuttons.dtd
+++ b/chrome/custombuttons/locale/en-US/custombuttons/custombuttons.dtd
@@ -1,3 +1,5 @@
+<!ENTITY custombuttons "Custom Buttons">
+
 <!ENTITY custombuttons.viewMenu_Item "Add new button…">
 <!ENTITY custombuttons.buttonPopup.edit "Edit button…">
 <!ENTITY custombuttons.buttonPopup.remove "Delete button">
