Integration with addon manager: implement category change behaviour
--HG--
branch : bug24045

--- a/chrome/custombuttons/locale/en-US/custombuttons/custombuttons.dtd
+++ b/chrome/custombuttons/locale/en-US/custombuttons/custombuttons.dtd
@@ -19,3 +19,4 @@
 <!ENTITY custombuttons.about.supportPageURL "Visit support page">
 
 <!ENTITY custombuttons.addons4.sortname "Sort by name">
+<!ENTITY custombuttons.addons4.nobuttons "You don't have any custom button installed">
