--- a/chrome/custombuttons/locale/it-IT/custombuttons/custombuttons.dtd
+++ b/chrome/custombuttons/locale/it-IT/custombuttons/custombuttons.dtd
@@ -1,3 +1,5 @@
+<!ENTITY custombuttons "Custom Buttons">
+
 <!ENTITY custombuttons.viewMenu_Item "Aggiungi nuovo pulsante…">
 <!ENTITY custombuttons.buttonPopup.edit "Modifica pulsante…">
 <!ENTITY custombuttons.buttonPopup.remove "Elimina pulsante">
@@ -13,3 +15,6 @@
 <!ENTITY custombuttons.prefs.enable_custombutton_protocol "Permetti l'installazione dei pulsanti dai messaggi di posta elettronica">
 <!ENTITY custombuttons.prefs.editor_save_size_and_position "Memorizza dimensioni e posizione per ogni finestra di modifica del pulsante">
 <!ENTITY custombuttons.about.supportPageURL "Visita il sito web">
+
+<!ENTITY custombuttons.addons4.sortname "Sort by name">
+<!ENTITY custombuttons.addons4.nobuttons "You don't have any custom button installed">
