--- a/chrome/custombuttons/locale/ko-KR/custombuttons/custombuttons.dtd
+++ b/chrome/custombuttons/locale/ko-KR/custombuttons/custombuttons.dtd
@@ -1,3 +1,5 @@
+<!ENTITY custombuttons "Custom Buttons">
+
 <!ENTITY custombuttons.viewMenu_Item "새 버튼 추가">
 <!ENTITY custombuttons.buttonPopup.edit "버튼 편집">
 <!ENTITY custombuttons.buttonPopup.remove "버튼 삭제">
@@ -15,3 +17,6 @@
 <!ENTITY custombuttons.prefs.editor_save_size_and_position "각각의 맞춤 버튼에 대한 편집기 창의 크기와 위치를 별도로 저장함">
 
 <!ENTITY custombuttons.about.supportPageURL "지원 페이지 방문">
+
+<!ENTITY custombuttons.addons4.sortname "Sort by name">
+<!ENTITY custombuttons.addons4.nobuttons "You don't have any custom button installed">
