--- a/chrome/custombuttons/locale/nl/custombuttons/custombuttons.dtd
+++ b/chrome/custombuttons/locale/nl/custombuttons/custombuttons.dtd
@@ -16,5 +16,5 @@
 <!ENTITY custombuttons.prefs.editor_save_size_and_position "Grootte en positie van bewerkingsvensters apart opslaan voor elke aangepaste knop">
 <!ENTITY custombuttons.about.supportPageURL "Ondersteuningspagina bezoeken">
 
-<!ENTITY custombuttons.addons4.sortname "Sort by name">
+<!ENTITY custombuttons.addons4.sortname "Name">
 <!ENTITY custombuttons.addons4.nobuttons "You don't have any custom button installed">
