--- a/chrome/custombuttons/locale/ru-RU/custombuttons/custombuttons.dtd
+++ b/chrome/custombuttons/locale/ru-RU/custombuttons/custombuttons.dtd
@@ -18,5 +18,5 @@
 
 <!ENTITY custombuttons.about.supportPageURL "Открыть страницу поддержки">
 
-<!ENTITY custombuttons.addons4.sortname "Sort by name">
-<!ENTITY custombuttons.addons4.nobuttons "You don't have any custom button installed">
+<!ENTITY custombuttons.addons4.sortname "Имя">
+<!ENTITY custombuttons.addons4.nobuttons "У вас нет установленных пользовательских кнопок">
