--- a/chrome/custombuttons/locale/sr/custombuttons/custombuttons.dtd
+++ b/chrome/custombuttons/locale/sr/custombuttons/custombuttons.dtd
@@ -16,5 +16,5 @@
 <!ENTITY custombuttons.prefs.editor_save_size_and_position "Сачувај величину и позицију уређивача одвојено за свако дугме">
 <!ENTITY custombuttons.about.supportPageURL "Страница за подршку">
 
-<!ENTITY custombuttons.addons4.sortname "Sort by name">
+<!ENTITY custombuttons.addons4.sortname "Name">
 <!ENTITY custombuttons.addons4.nobuttons "You don't have any custom button installed">
