--- a/chrome/custombuttons/locale/zh-CN/custombuttons/custombuttons.dtd
+++ b/chrome/custombuttons/locale/zh-CN/custombuttons/custombuttons.dtd
@@ -1,4 +1,4 @@
-<!ENTITY custombuttons "Custom Buttons">
+<!ENTITY custombuttons "自定义按钮">
 
 <!ENTITY custombuttons.viewMenu_Item "添加新按钮…">
 <!ENTITY custombuttons.buttonPopup.edit "编辑该按钮…">
@@ -10,11 +10,11 @@
 <!ENTITY custombuttons.buttonPopup.update "更新按钮">
 <!ENTITY custombuttons.buttonPopup.subCall "自定义按钮">
 <!ENTITY custombuttons_prefsDialog.title "Custombuttons: 设置">
-<!ENTITY custombuttons.prefs.show_apply_button "在代码编辑器显示&quot;应用&quot;按钮">
+<!ENTITY custombuttons.prefs.show_apply_button "在代码编辑器显示&quot;保存&quot;按钮">
 <!ENTITY custombuttons.prefs.disable_init "禁用按钮初始化 (在新窗口生效)">
 <!ENTITY custombuttons.prefs.enable_custombutton_protocol "启用从邮件中安装按钮">
 <!ENTITY custombuttons.prefs.editor_save_size_and_position "分别为每个按钮保存编辑窗口位置和大小">
 <!ENTITY custombuttons.about.supportPageURL "访问支持页">
 
-<!ENTITY custombuttons.addons4.sortname "Name">
-<!ENTITY custombuttons.addons4.nobuttons "You don't have any custom button installed">
+<!ENTITY custombuttons.addons4.sortname "名称">
+<!ENTITY custombuttons.addons4.nobuttons "您未安装任何自定义按钮">
